--- a/dockerfile_tf131_open3d
+++ b/dockerfile_tf131_open3d
@@ -1,6 +1,7 @@
 FROM nvidia/cuda:10.0-cudnn7-runtime-ubuntu16.04
 RUN apt update || true \
     && apt install -y wget vim bzip2 unzip libsm6 libxrender1 libxext-dev libgl1-mesa-glx\
+    && apt install -y openssh-server openssh-client \
     && apt-get clean
 
 #COPY ./Miniconda3-4.5.12-Linux-x86_64.sh /anaconda.sh
